# zaza_interior_website

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_render  README.md  db.sqlite3  docker-compose-certbot.yml  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.render.yml  entrypoint.sh  manage.py  pyproject.toml  render.yaml  requirements.txt  start.sh
.github/workflows/: deploy_workflow.yml
locale/bg/LC_MESSAGES/: django.po
nginx/dev/: nginx.conf
nginx/dev/conf.d/: web.conf
nginx/dev/custom_pages/: 50x.html
nginx/prod/conf.d/: web.conf
nginx/render/conf.d/: web.conf
staticfiles/: robots.txt
staticfiles/images/: bg_flag.avif  hero-bg.avif  hero-bg.jfif  uk_flag.avif
staticfiles/scripts/: activeNavLinks.js  articlesAnimation.js  backToTopButton.js  cookiePopUp.js  galleryModal.js
staticfiles/styles/: about.css  contacts.css  cookies-pop-up.css  gallery.css  how-it-works.css  index.css  layout.css  navigation.css  reset.css  responsive.css  styles.css  typography.css  variables.css
templates/: base.html
templates/gallery/: main_gallery.html
templates/web/: about.html  contacts.html  cookies-banner.html  email_template.html  footer.html  header.html  how-it-works.html  index.html
zaza_interior/: asgi.py  settings.py  urls.py  wsgi.py
zaza_interior/gallery/: apps.py  helpers.py  signals.py  urls.py  validators.py  views.py
zaza_interior/web/: admin.py  apps.py  forms.py  models.py  urls.py  validators.py  views.py
zaza_interior/web/migrations/: 0001_initial.py  0002_contactformdata_created_on.py
zaza_interior/web/seo/: context_processors.py  sitemaps.py
