[project]
name = "zaza-interior-website"
version = "0.1.0"
description = "Website"
requires-python = "==3.12.*"
dependencies = [
    "asgiref==3.11.0",
    "certifi==2025.11.12",
    "chardet==5.2.0",
    "charset-normalizer==3.4.4",
    "cssselect2==0.8.0",
    "diff-match-patch==20241021",
    "django==6.0",
    "django-filer==3.4.1",
    "django-import-export==4.3.14",
    "django-polymorphic==4.5.2",
    "django-recaptcha==4.1.0",
    "easy-thumbnails==2.10.1",
    "et-xmlfile==2.0.0",
    "gunicorn==23.0.0",
    "idna==3.11",
    "lxml==6.0.2",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pillow==12.1.0",
    "pip==25.3",
    "python-decouple==3.8",
    "reportlab==4.4.7",
    "requests==2.32.5",
    "setuptools==80.9.0",
    "sqlparse==0.5.5",
    "svglib==1.5.1",
    "tablib==3.9.0",
    "tinycss2==1.5.1",
    "tzdata==2025.3",
    "urllib3==2.6.2",
    "webencodings==0.5.1",
    "wheel==0.45.1",
]
