[project]
name = "zaza-interior-website"
version = "0.1.0"
description = "Website"
requires-python = "==3.12.*"
dependencies = [
    "asgiref==3.11.1",
    "certifi==2026.2.25",
    "chardet==6.0.0",
    "charset-normalizer==3.4.4",
    "cssselect2==0.9.0",
    "diff-match-patch==20241021",
    "django==6.0.2",
    "django-filer==3.4.4",
    "django-import-export==4.4.0",
    "django-polymorphic==4.11.1",
    "django-recaptcha==4.1.0",
    "easy-thumbnails==2.10.1",
    "et-xmlfile==2.0.0",
    "gunicorn==25.1.0",
    "idna==3.11",
    "lxml==6.0.2",
    "openpyxl==3.1.5",
    "packaging==26.0",
    "pillow==12.1.1",
    "pip==26.0.1",
    "python-decouple==3.8",
    "reportlab==4.4.10",
    "requests==2.32.5",
    "setuptools==82.0.0",
    "sqlparse==0.5.5",
    "svglib==1.5.1",
    "tablib==3.9.0",
    "tinycss2==1.5.1",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "webencodings==0.5.1",
    "wheel==0.46.3",
]
