[project]
name = "zaza-interior-website"
version = "0.1.0"
description = "Website"
requires-python = "==3.12.*"
dependencies = [
    "asgiref==3.11.1",
    "certifi==2026.4.22",
    "chardet==7.4.3",
    "charset-normalizer==3.4.7",
    "cssselect2==0.9.0",
    "diff-match-patch==20241021",
    "django==6.0.4",
    "django-filer==3.4.4",
    "django-import-export==4.4.0",
    "django-polymorphic==4.11.2",
    "django-recaptcha==4.1.0",
    "easy-thumbnails==2.10.1",
    "et-xmlfile==2.0.0",
    "gunicorn==25.3.0",
    "idna==3.13",
    "lxml==6.1.0",
    "openpyxl==3.1.5",
    "packaging==26.2",
    "pillow==12.2.0",
    "pip==26.0.1",
    "python-decouple==3.8",
    "reportlab==4.4.10",
    "requests==2.33.1",
    "setuptools==82.0.1",
    "sqlparse==0.5.5",
    "svglib==1.5.1",
    "tablib==3.9.0",
    "tinycss2==1.5.1",
    "tzdata==2026.2",
    "urllib3==2.6.3",
    "webencodings==0.5.1",
    "wheel==0.47.0",
]
